@@ -18,14 +18,14 @@ var updateDeleteButton = function(anySelected, newState) {
         }
     });
     if (anySelected) {
-        // enable button and add url
-        $deleteButton.removeClass('visuallyhidden');
+        // hide button and add url
+        $deleteButton.removeClass('u-hidden');
         var url = $deleteButton.data('url');
         url = url + $.param({id: ids}, true);
         $deleteButton.attr('href', url);
     } else {
-        // disable button and remove url
-        $deleteButton.addClass('visuallyhidden');
+        // show button and remove url
+        $deleteButton.addClass('u-hidden');
         $deleteButton.attr('href', null);
     }
 };
